# opencl_test

./: CMakeLists.txt
src/: main.cpp
